--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "colorless-refactor",
-  "version": "0.0.0",
+  "name": "colorless",
+  "version": "0.0.2",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
